--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
+    "@splidejs/react-splide": "^0.7.12",
     "aos": "^2.3.4",
     "axios": "^1.7.2",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.2.0",
     "react": "^18.2.0",
     "react-countup": "^6.5.0",
@@ -21,6 +23,8 @@
     "react-redux": "^9.1.2",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
