--- a/package.json
+++ b/package.json
@@ -14,21 +14,23 @@
     "@splidejs/react-splide": "^0.7.12",
     "aos": "^2.3.4",
     "axios": "^1.7.2",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.0",
+    "lucide-react": "^0.475.0",
     "react": "^18.2.0",
     "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-redux": "^9.1.2",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.167.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/node": "^22.13.4",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
