--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.0",
+    "gsap": "^3.12.7",
     "lucide-react": "^0.475.0",
     "ogl": "^1.0.11",
     "react": "^18.2.0",
