--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-navigation-menu": "^1.2.5",
     "@reduxjs/toolkit": "^2.2.5",
     "@splidejs/react-splide": "^0.7.12",
     "aos": "^2.3.4",
@@ -30,6 +31,7 @@
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.167.1",
     "typewriter-effect": "^2.21.0",
+    "usehooks-ts": "^3.1.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
