--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.18.2",
     "gsap": "^3.12.7",
+    "i18next": "^24.2.2",
     "lucide-react": "^0.475.0",
     "ogl": "^1.0.11",
-    "react": "^18.2.0",
     "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^15.4.1",
     "react-icons": "^4.11.0",
     "react-redux": "^9.1.2",
     "react-slick": "^0.29.0",
