--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@radix-ui/react-navigation-menu": "^1.2.5",
+    "@radix-ui/react-slot": "^1.1.2",
     "@reduxjs/toolkit": "^2.2.5",
     "@splidejs/react-splide": "^0.7.12",
     "aos": "^2.3.4",
